Fix issue of banner image style 4 on tablet and mobile

--- a/medstar-01/assets/scss/components/_banner-slider.scss
+++ b/medstar-01/assets/scss/components/_banner-slider.scss
@@ -214,6 +214,10 @@
     @media (min-width: 1400px) {}
 }
 
+.single-image-banner {
+    position: relative;
+}
+
 .single-image-banner,
 .swiper-scale-effect {
     .card-image {
