--- a/medstar-01/style.css
+++ b/medstar-01/style.css
@@ -7379,6 +7379,10 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
   color: #C79E55;
 }
 
+.single-image-banner {
+  position: relative;
+}
+
 .single-image-banner .card-image,
 .swiper-scale-effect .card-image {
   height: 100%;
